Renamed import button to sync

--- a/hr/templates/admin.html
+++ b/hr/templates/admin.html
@@ -59,13 +59,14 @@
 </div>
 
 <div class="card-panel">
-    <h4>Import all corp members</h4>
+    <h4>Sync members</h4>
     <p>
         This will import all corp members from the EVE API and create
         memberships items the database for them. All members will automatically
-        be marked as "Accepted" when imported this way.<br><br>
+        be marked as "Accepted" when imported this way.<br>
+        Characters who have left the corp will be marked as such.<br>
     </p>
-    <a class="btn waves-effect waves-light orange" id="import" href="#">Import
+    <a class="btn waves-effect waves-light orange" id="import" href="#">Sync
         <i class="material-icons right">send</i>
     </a>
 </div>
