--- a/hr/templates/admin.html
+++ b/hr/templates/admin.html
@@ -7,7 +7,7 @@
         $('#import').on('click', function() {
             $(this).addClass('disabled');
             $(this).text('Importing ...');
-            window.location.href = "{{ url_for('import_members') }}";
+            window.location.href = "{{ url_for('sync') }}";
         });
     });
 </script>
@@ -15,6 +15,19 @@
 
 {% block content %}
 <h2>Admin<small> this page is locked to <strong>{{ admins }}</strong></small></h2>
+
+<div class="card-panel">
+    <h4>Sync members</h4>
+    <p>
+        This will import all corp members from the EVE API and create
+        memberships items the database for them. All members will automatically
+        be marked as "Accepted" when imported this way. Characters who have
+        left the corp will be marked as such.<br><br>
+    </p>
+    <a class="btn waves-effect waves-light green" id="import" href="#">Sync
+        <i class="material-icons right">send</i>
+    </a>
+</div>
 
 <div class="card-panel">
     <h4>The following people are recruiters</h4>
@@ -56,18 +69,5 @@
             </button>
         </div>
     </form>
-</div>
-
-<div class="card-panel">
-    <h4>Sync members</h4>
-    <p>
-        This will import all corp members from the EVE API and create
-        memberships items the database for them. All members will automatically
-        be marked as "Accepted" when imported this way.<br>
-        Characters who have left the corp will be marked as such.<br>
-    </p>
-    <a class="btn waves-effect waves-light orange" id="import" href="#">Sync
-        <i class="material-icons right">send</i>
-    </a>
 </div>
 {% endblock content %}
