--- a/hr/templates/base.html
+++ b/hr/templates/base.html
@@ -42,7 +42,7 @@
                         {% endif %}
                     {% endif %}
                     {% if current_user.admin %}
-                        <li><a href="{{ url_for('admin') }}" class="black-text">Admin</a></li>
+                        <li><a href="{{ url_for('admin') }}">Admin</a></li>
                     {% endif %}
                     <li><a href="{{ url_for('logout') }}">Log out</a></li>
                 {% elif not request.endpoint == 'login' %}
