--- a/hr/templates/reports.html
+++ b/hr/templates/reports.html
@@ -2,5 +2,48 @@
 
 
 {% block content %}
-<h2 class="red">Page under construction</h2>
+<h2>Members with invalid mains</h2>
+<table>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Main</th>
+            <th>Status</th>
+            <th>Corp</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for member in invalid_mains %}
+            <tr>
+                <td><a href="{{ url_for('details', id=member.id) }}">{{ member.character_name }}</a></td>
+                <td>{{ member.main }}</td>
+                <td>{{ member.status }}</td>
+                <td>{{ member.corporation }}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
+<h2>Members with mains who've left the corp</h2>
+<table>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Main</th>
+            <th>Status</th>
+            <th>Corp</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for member in defunct_mains %}
+            <tr>
+                <td><a href="{{ url_for('details', id=member.id) }}">{{ member.character_name }}</a></td>
+                <td>{{ member.main }}</td>
+                <td>{{ member.status }}</td>
+                <td>{{ member.corporation }}</td>
+            </tr>
+        {% endfor %}
+    </tbody>
+</table>
+</ul>
 {% endblock content %}
