--- a/hr/templates/admin.html
+++ b/hr/templates/admin.html
@@ -9,6 +9,7 @@
             $(this).text('Importing ...');
             window.location.href = "{{ url_for('sync') }}";
         });
+        $('select').material_select();
     });
 </script>
 {% endblock head %}
@@ -24,6 +25,39 @@
         be marked as "Accepted" when imported this way. Characters who have
         left the corp will be marked as such.<br><br>
     </p>
+    <a class="btn waves-effect waves-light green" id="import" href="#">Sync
+        <i class="material-icons right">send</i>
+    </a>
+</div>
+
+<div class="card-panel">
+    <h4>Set Status</h4>
+    <form action="{{ url_for('admin_set_status') }}" method="POST" class="col s12">
+        <div class="row">
+            <div class="input-field col s6">
+                <label for="name">Character (full) name</label>
+                <input type="text" name="name" required>
+            </div>
+            <div class="input-field col s6">
+                <select name="status">
+                    <option value="New">New</option>
+                    <option value="Ready to be interviewed">Ready to be interviewed</option>
+                    <option value="Ready to be accepted">Ready to be accepted</option>
+                    <option value="Accepted">Accepted</option>
+                    <option value="Recruiter">Recruiter</option>
+                    <option value="Left">Left</option>
+                </select>
+                <label for="status">Status</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s6">
+                <button class="btn waves-effect waves-light orange" type="submit" name="action">set
+                    <i class="material-icons right">send</i>
+                </button>
+            </div>
+        </div>
+    </form>
     <a class="btn waves-effect waves-light green" id="import" href="#">Sync
         <i class="material-icons right">send</i>
     </a>
