Change color scheme

--- a/hr/templates/base.html
+++ b/hr/templates/base.html
@@ -24,11 +24,11 @@
     </script>
     {% block head %}{% endblock head %}
 </head>
-<body class="orange lighten-5">
+<body class="grey lighten-5">
 
 <header>
     <nav>
-        <div class="nav-wrapper orange lighten-2">
+        <div class="nav-wrapper">
             <div class="container">
                 <a class="brand-logo">GETIN</a>
                 <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -92,7 +92,7 @@
     </div>
 </main>
 
-<footer class="page-footer footer-copyright orange lighten-2">
+<footer class="page-footer footer-copyright">
     <div class="container center-align">
         &copy; 2016 <a href="https://celeodor.com"><i>Celeodor</i></a> |
         <a href="https://git.celeodor.com/Celeo/GETIN-HR">source</a> |
