--- a/hr/static/css/global.css
+++ b/hr/static/css/global.css
@@ -3,6 +3,14 @@ body {
     min-height: 100vh;
     flex-direction: column;
 }
+.nav-wrapper {
+    background-color: #333;
+    color: white;
+}
+footer.page-footer {
+    background-color: #333;
+    color: white;
+}
 main {
     flex: 1 0 auto;
 }
