--- a/hr/templates/join.html
+++ b/hr/templates/join.html
@@ -15,7 +15,7 @@
 <div class="card-panel">
     <div class="row">
         <div class="col s12">
-            <a class="btn waves-effect waves-light orange"
+            <a class="btn waves-effect waves-light grey darken-1"
                 href="https://community.eveonline.com/support/api-key/CreatePredefined?accessMask={{ config['API_KEY_MASK'] }}"
                 target="_blank">Create key
                 <i class="material-icons right">send</i>
@@ -39,7 +39,7 @@
                 <input type="text" name="main">
             </div>
             <div class="col s6">
-                <button class="btn waves-effect waves-light orange" style="top: 24px;">Apply
+                <button class="btn waves-effect waves-light grey darken-1" style="top: 24px;">Apply
                     <i class="material-icons right">send</i>
                 </button>
             </div>
