--- a/hr/templates/add_applicant.html
+++ b/hr/templates/add_applicant.html
@@ -49,7 +49,7 @@
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-effect waves-light orange" type="submit" name="action">Submit
+            <button class="btn waves-effect waves-light grey darken-1" type="submit" name="action">Submit
                 <i class="material-icons right">send</i>
             </button>
         </div>
