--- a/hr/templates/admin.html
+++ b/hr/templates/admin.html
@@ -25,7 +25,7 @@
         be marked as "Accepted" when imported this way. Characters who have
         left the corp will be marked as such.<br><br>
     </p>
-    <a class="btn waves-effect waves-light green" id="import" href="#">Sync
+    <a class="btn waves-effect waves-light grey darken-1" id="import" href="#">Sync
         <i class="material-icons right">send</i>
     </a>
 </div>
@@ -52,7 +52,7 @@
         </div>
         <div class="row">
             <div class="col s6">
-                <button class="btn waves-effect waves-light orange" type="submit" name="action">set
+                <button class="btn waves-effect waves-light grey darken-1" type="submit" name="action">set
                     <i class="material-icons right">send</i>
                 </button>
             </div>
@@ -95,7 +95,7 @@
             </div>
         </div>
         <div class="col s6">
-            <button class="btn waves-effect waves-light orange" type="submit" name="action">Add
+            <button class="btn waves-effect waves-light grey darken-1" type="submit" name="action">Add
                 <i class="material-icons right">send</i>
             </button>
         </div>
