--- a/hr/templates/personal.html
+++ b/hr/templates/personal.html
@@ -53,7 +53,7 @@
         <tr>
             <td>API key(s)</td>
             <td>
-                <a class="waves-effect waves-light btn modal-trigger orange" href="#modalAPI">Edit</a>
+                <a class="waves-effect waves-light btn modal-trigger grey darken-1" href="#modalAPI">Edit</a>
             </td>
         </tr>
     </tbody>
@@ -83,7 +83,7 @@
     </div>
     <div class="modal-footer">
         <a class="modal-action modal-close waves-effect waves-light btn-flat white">Close</a>
-        <button class="waves-effect waves-light btn-flat orange" type="submit" form="formKeys">Save</button>
+        <button class="waves-effect waves-light btn-flat grey darken-1" type="submit" form="formKeys">Save</button>
     </div>
 </div>
 {% endblock content %}
