Admin auth bypass; more status options on details

--- a/hr/templates/details.html
+++ b/hr/templates/details.html
@@ -53,6 +53,8 @@
                             <option value="New">New</option>
                             <option value="Ready to be interviewed">Ready to be interviewed</option>
                             <option value="Ready to be accepted">Ready to be accepted</option>
+                            <option value="Accepted">Accepted</option>
+                            <option value="Denied">Denied</option>
                         </select>
                     </div>
                     <div class="col s4">
