Renamed template; added notes to UI

--- a/hr/templates/add_member.html
+++ b/hr/templates/add_member.html
@@ -28,8 +28,8 @@
                 <label for="status">Status</label>
             </div>
             <div class="input-field col s4">
-                <label for="alts">Alts</label>
-                <input type="text" name="alts">
+                <label for="main">Main</label>
+                <input type="text" name="main">
             </div>
         </div>
         <div class="row">
