--- a/hr/templates/join.html
+++ b/hr/templates/join.html
@@ -8,7 +8,8 @@
 {% if current_user.member.status == 'Guest' %}
     If you want to join, create a new API key with the button,
     set it to not expire, copy it in below, and hit the Apply button.<br>
-    If you already have a character in the corp, put its name in the other box.
+    If you already have a character in the corp, put its name in the other box.<br>
+    <span class="red-text">All character names are case-sensitive!</span>
 </h5>
 
 <br>
