Change textbox for main selection to dropdown
The dropdown is populated with a list of all of the character's already in the application.

--- a/hr/static/css/global.css
+++ b/hr/static/css/global.css
@@ -61,3 +61,7 @@ td.small {
 ul.circle > li {
     list-style-type: circle;
 }
+.modal-bottom-tall {
+    max-height: 100% !important;
+    height: 75% !important;
+}
