--- a/hr/templates/join.html
+++ b/hr/templates/join.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
 
 
+{% block head %}
+<script>
+    $(document).ready(function() {
+        $('select').material_select();
+    });
+</script>
+{% endblock head %}
+
+
 {% block content %}
 <h3>Hey, {{ character_name }}</h3>
 
@@ -35,9 +44,14 @@
             </div>
         </div>
         <div class="row">
-            <div class="col s6 input-field">
+            <div class="input-field col s6">
+                <select name="main" id="main">
+                    <option value="*">** This character **</option>
+                    {% for member in all_members %}
+                        <option value="{{ member }}">{{ member }}</option>
+                    {% endfor %}
+                </select>
                 <label for="main">Main</label>
-                <input type="text" name="main">
             </div>
             <div class="col s6">
                 <button class="btn waves-effect waves-light grey darken-1" style="top: 24px;">Apply
