--- a/hr/templates/reports.html
+++ b/hr/templates/reports.html
@@ -64,7 +64,7 @@
 </ul>
 
 <h2>
-    Members with missing API keys
+    Members with a missing API key
     <i class="material-icons tooltipped" data-position="bottom" data-delay="50" data-tooltip="Characters that don't
     have an API key recorded">info</i>
 </h2>
